WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203028
Ignore document.open/write after the active parser has been aborted
https://bugs.webkit.org/show_bug.cgi?id=203028
Summary
Ignore document.open/write after the active parser has been aborted
Domenic Denicola
Reported
2019-10-16 01:24:45 PDT
See
https://github.com/whatwg/html/pull/4907
Attachments
WIP Patch
(2.81 KB, patch)
2019-10-16 16:11 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(3.09 KB, patch)
2019-10-16 16:13 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews214 for win-future
(14.01 MB, application/zip)
2019-10-16 18:31 PDT
,
EWS Watchlist
no flags
Details
Patch
(7.32 KB, patch)
2019-10-23 10:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.32 KB, patch)
2019-10-23 11:42 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-10-16 15:49:47 PDT
Tests:
https://github.com/web-platform-tests/wpt/pull/19732
Chris Dumez
Comment 2
2019-10-16 16:11:31 PDT
Created
attachment 381129
[details]
WIP Patch
Chris Dumez
Comment 3
2019-10-16 16:13:04 PDT
Created
attachment 381130
[details]
WIP Patch
EWS Watchlist
Comment 4
2019-10-16 18:31:13 PDT
Comment on
attachment 381130
[details]
WIP Patch
Attachment 381130
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13141182
New failing tests: fast/dom/Document/document-write-doctype.html fast/parser/document-write-onload-nesting.html fast/parser/document-write-onload-clear.html fast/parser/document-close-iframe-load-partial-entity.html fast/dom/document-set-title-mutation-crash.html fast/frames/document-write-in-iframe-onload.html fast/parser/document-close-nested-iframe-load.html editing/execCommand/insert-image-with-selecting-document.html fast/tokenizer/ampersand-in-special-tag.html fast/dom/Document/document-close-nested-iframe-load.html fast/parser/iframe-onload-document-close-with-external-script-2.html fast/parser/implicit-head-in-fragment-crash.html fast/dom/Document/document-reopen.html fast/dom/option-text-mutation-crash.html fast/parser/document-write-onload-ordering.html editing/execCommand/append-node-under-document.html editing/editability/empty-document-stylewithcss.html fast/dom/resource-locations-in-created-html-document.html fast/custom-elements/adopting-from-frameless-document.html fast/parser/adoption-agency-crash-03.html
EWS Watchlist
Comment 5
2019-10-16 18:31:15 PDT
Created
attachment 381144
[details]
Archive of layout-test-results from ews214 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews214 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Chris Dumez
Comment 6
2019-10-23 10:58:37 PDT
Created
attachment 381697
[details]
Patch
Chris Dumez
Comment 7
2019-10-23 11:42:48 PDT
Created
attachment 381708
[details]
Patch
Geoffrey Garen
Comment 8
2019-10-23 13:34:04 PDT
Comment on
attachment 381708
[details]
Patch r=me
WebKit Commit Bot
Comment 9
2019-10-23 16:02:40 PDT
Comment on
attachment 381708
[details]
Patch Clearing flags on attachment: 381708 Committed
r251506
: <
https://trac.webkit.org/changeset/251506
>
WebKit Commit Bot
Comment 10
2019-10-23 16:02:42 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2019-10-23 16:03:21 PDT
<
rdar://problem/56558982
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug