Ignore document.open/write after the active parser has been aborted https://bugs.webkit.org/show_bug.cgi?id=203028

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline WPT test that is now passing.

* web-platform-tests/html/webappapis/dynamic-markup-insertion/opening-the-input-stream/aborted-parser.window-expected.txt:

Source/WebCore:

Ignore document.open/write after the active parser has been aborted, as per:
- https://github.com/whatwg/html/pull/4907

Test: imported/blink/fast/loader/document-write-after-location-change.html

* dom/Document.cpp:
(WebCore::Document::open):
(WebCore::Document::cancelParsing):
(WebCore::Document::implicitOpen):
(WebCore::Document::write):
* dom/Document.h:

LayoutTests:

Import test from blink.

* imported/blink/fast/loader/document-write-after-location-change-expected.txt: Added.
* imported/blink/fast/loader/document-write-after-location-change.html: Added.
* imported/blink/fast/loader/resources/pass-and-notify-done.html: Added.


Canonical link: https://commits.webkit.org/216741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251506 268f45cc-cd09-0410-ab3c-d52691b4dbfc